--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "ebustl"
-version = "0.4.0"
+name = "ebustl-parser"
+version = "0.5.0"
 description = "Parse subtitle files in the EBU-STL format with Rust."
-authors = ["Christophe Augier <christophe.augier@gmail.com>"]
-license = "MIT"
-repository = "https://github.com/tytouf/ebustl-rs"
+authors = ["Mattias Eriksson <snaggen@mayam.com>"]
+original-authors = ["Christophe Augier <christophe.augier@gmail.com>"]
+license = "EUPL-1.2"
+repository = "https://github.com/snaggen/ebustl-parser"
 readme = "README.md"
 keywords = ["stl", "subtitle", "parser"]
 categories = ["multimedia:video", "parser-implementations"]
