--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ categories = ["multimedia:video", "parser-implementations"]
 edition = "2021"
 
 [dependencies]
-nom = "7.1.3"
 chrono = "0.4"
 thiserror = "1.0"                                                               
 codepage-strings = "1.0.2"
 textcode = "0.2.2"
+winnow = "0.3"
 
