--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "EUPL-1.2"
 repository = "https://github.com/snaggen/ebustl-parser"
 readme = "README.md"
 keywords = ["stl", "subtitle", "parser"]
-categories = ["multimedia:video", "parser-implementations"]
+categories = ["multimedia::video", "parser-implementations"]
 edition = "2021"
 
 [dependencies]
