Fix authors field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "ebustl-parser"
 version = "0.6.2"
 description = "Parse subtitle files in the EBU-STL format with Rust."
-authors = ["Mattias Eriksson <snaggen@mayam.com>"]
-original-authors = ["Christophe Augier <christophe.augier@gmail.com>"]
+authors = ["Mattias Eriksson <snaggen@mayam.com>", "Christophe Augier <christophe.augier@gmail.com>"]
 license = "EUPL-1.2"
 repository = "https://github.com/snaggen/ebustl-parser"
 readme = "README.md"
